test/src/e2e_vm_tests/test_programs/should_pass/dca/unused_enum/src/enum.sw
library;

pub enum AnEnum {
    Variant: (),
}
