test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/error_attr.sw
library;

#[allow(dead_code)]
#[error_type]
pub enum NotOk {
    #[error(m = 42)]
    A: (),
}